--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -69,7 +69,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập tiêu đề ..."
+            android:hint="Nhập tiêu đề"
             android:inputType="textMultiLine"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
@@ -95,7 +95,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/bg_textfield"
-            android:hint="Nhập tên sản phẩm ..."
+            android:hint="Nhập tên nội dung"
             android:inputType="textMultiLine"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
