--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,31 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="@color/white"
     tools:context=".Account.LoginActivity">
-
-    <ImageButton
-        android:id="@+id/img_Quaylai"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/ic_outline_keyboard_backspace_24"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="100dp"
         android:text="Đăng nhập"
         android:textColor="@color/green"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/nunito_bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="30dp"
         android:orientation="vertical">
 
         <EditText
@@ -39,7 +32,8 @@
             android:hint="Tên đăng nhập"
             android:inputType="textEmailAddress"
             android:paddingLeft="20dp"
-            android:textColor="@color/green"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="15dp" />
 
         <EditText
@@ -51,33 +45,9 @@
             android:hint="Mật khẩu"
             android:inputType="textPassword"
             android:paddingLeft="20dp"
-            android:textColor="@color/green"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito"
             android:textSize="15dp" />
-
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp">
-
-            <CheckBox
-                android:id="@+id/cb_Ghinho"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Ghi nhớ"
-                android:textColor="@color/green"
-                android:textSize="17sp" />
-
-            <TextView
-                android:id="@+id/txt_QuenMK"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quên mật khẩu"
-                android:textColor="@color/red"
-                android:textSize="19dp"
-                android:textStyle="bold" />
-        </LinearLayout>
 
         <Button
             android:id="@+id/btn_Dangnhap"
@@ -89,7 +59,7 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="25sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/nunito_bold" />
 
     </LinearLayout>
 </LinearLayout>
