--- a/app/src/main/res/layout/custom_book.xml
+++ b/app/src/main/res/layout/custom_book.xml
@@ -15,7 +15,8 @@
         android:gravity="center|left"
         android:paddingLeft="10dp"
         android:text="A"
-        android:textStyle="bold" />
+        android:fontFamily="@font/nunito_bold"
+        android:textColor="@color/gray"/>
 
     <ImageView
         android:id="@+id/book_deletebook"
