--- a/app/src/main/res/drawable/edt_trang.xml
+++ b/app/src/main/res/drawable/edt_trang.xml
@@ -1,21 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="300dp"
-    android:height="70dp"
-    android:viewportWidth="300"
-    android:viewportHeight="70">
+    android:width="370dp"
+    android:height="50dp"
+    android:viewportWidth="370"
+    android:viewportHeight="50">
 
     <group>
 
-        <clip-path android:pathData="M10 0H290C295.523 0 300 4.47715 300 10V60C300 65.5228 295.523 70 290 70H10C4.47715 70 0 65.5228 0 60V10C0 4.47715 4.47715 0 10 0Z" />
+        <clip-path android:pathData="M15 0H355C363.284 0 370 6.71573 370 15V35C370 43.2843 363.284 50 355 50H15C6.71573 50 0 43.2843 0 35V15C0 6.71573 6.71573 0 15 0Z" />
 
         <path
-            android:fillColor="#FFFFFF"
-            android:pathData="M0 0V70H300V0" />
-
-        <path
-            android:pathData="M10 0H290C295.523 0 300 4.47715 300 10V60C300 65.5228 295.523 70 290 70H10C4.47715 70 0 65.5228 0 60V10C0 4.47715 4.47715 0 10 0Z"
-            android:strokeWidth="4"
-            android:strokeColor="#B3164C1A" />
+            android:fillColor="#26D3D3D3"
+            android:pathData="M0 0V50H370V0" />
 
     </group>
 
