--- a/app/src/main/res/layout/activity_banner.xml
+++ b/app/src/main/res/layout/activity_banner.xml
@@ -72,7 +72,7 @@
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
                 android:fontFamily="@font/nunito"
-                android:hint="Nhập tên post sản phẩm ..."
+                android:hint="Nhập tên poster"
                 android:inputType="text"
                 android:paddingLeft="20dp"
                 android:textColor="@color/gray"
