--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -10,54 +10,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_Back_to_admin"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:text="Danh sách chính sách"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            android:fontFamily="@font/nunito_bold"
+            android:text="Chính sách - điều khoản"
+            android:textColor="@color/green"
+            android:textSize="23sp" />
 
-        <ImageView
+        <Button
             android:id="@+id/img_addbook"
-            android:layout_width="30dp"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/add" />
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_them"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm"
+            android:textAllCaps="false"
+            android:textColor="@color/green"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="370dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <SearchView
             android:id="@+id/searchviewBook"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_margin="5dp"
+            android:layout_height="match_parent"
             android:background="@drawable/search"
-            app:iconifiedByDefault="false"
-            app:queryHint="Search..." />
+            android:inputType="text"
+            android:queryHint="Tìm kiếm ..."
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
+            android:textSize="9sp"
+            android:fontFamily="@font/nunito" />
     </LinearLayout>
 
     <LinearLayout
