--- a/app/src/main/res/layout/activity_daily_report.xml
+++ b/app/src/main/res/layout/activity_daily_report.xml
@@ -9,39 +9,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/btn_BackReport"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:fontFamily="@font/nunito_bold"
             android:text="Thống kê theo ngày"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
-
-        <View
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@color/white" />
+            android:textColor="@color/green"
+            android:textSize="23sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:orientation="vertical">
@@ -57,41 +43,42 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Chọn ngày"
-                android:textColor="@color/black"
-                android:textSize="17dp"
-                android:textStyle="bold" />
+                android:textColor="@color/gray"
+                android:textSize="17dp" />
 
             <TextView
                 android:id="@+id/report_datereport"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/bg_textfield"
+                android:background="@drawable/edt_trang"
                 android:drawableRight="@drawable/sort"
+                android:fontFamily="@font/nunito"
                 android:gravity="center"
                 android:paddingRight="7dp"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:textColor="@color/gray"
+                android:textSize="15sp" />
 
             <Button
                 android:id="@+id/report_xemreport"
                 android:layout_width="100dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/bg_blue"
+                android:background="@drawable/button_luu"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Xem"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="17dp"
-                android:textStyle="bold" />
+                android:textColor="@color/blue"
+                android:textSize="17dp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -100,10 +87,10 @@
                 android:layout_height="30dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Chi tiết báo cáo"
-                android:textColor="@color/black"
-                android:textSize="18dp"
-                android:textStyle="bold" />
+                android:textColor="@color/gray"
+                android:textSize="18dp" />
 
             <com.anychart.AnyChartView
                 android:id="@+id/any_chart_view"
