--- a/app/src/main/res/layout/activity_detail_post.xml
+++ b/app/src/main/res/layout/activity_detail_post.xml
@@ -9,37 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/img_BackDSBV"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:fontFamily="@font/nunito_bold"
             android:text="Chi tiết bài viết"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
+            android:textColor="@color/green"
+            android:textSize="23sp" />
 
-        <ImageView
-            android:id="@+id/img_DeletePost"
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/img_UpdatePost"
+            android:layout_width="80dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/delete" />
-
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_luu"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Lưu"
+            android:textAllCaps="false"
+            android:textColor="@color/blue"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <ScrollView
@@ -69,6 +64,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
+                android:fontFamily="@font/nunito"
                 android:gravity="center|left"
                 android:hint="25/1/2021"
                 android:textSize="13sp"
@@ -79,8 +75,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/nunito"
                 android:text="Tiêu đề"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -91,13 +88,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập tiêu đề ..."
                 android:inputType="textMultiLine"
                 android:paddingLeft="20dp"
                 android:paddingTop="5dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="5dp"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <TextView
@@ -105,8 +103,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/nunito"
                 android:text="Nội dung"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="17dp" />
 
             <EditText
@@ -116,28 +115,31 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="30dp"
                 android:background="@drawable/bg_textfield"
+                android:fontFamily="@font/nunito"
                 android:hint="Nhập nội dung ..."
                 android:inputType="textMultiLine"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
                 android:textAlignment="viewStart"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:textSize="16dp" />
 
             <Button
-                android:id="@+id/img_UpdatePost"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:id="@+id/img_DeletePost"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_button"
-                android:text="Cập nhật"
+                android:background="@drawable/button_do"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Xóa bài viết"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textColor="@color/red"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
