--- a/app/src/main/res/layout/activity_list_banner.xml
+++ b/app/src/main/res/layout/activity_list_banner.xml
@@ -1,63 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Banner.ListBannerActivity"
     android:background="@color/white"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/btn_BackPoster"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Danh sách banner"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/btn_AddPoster"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/add" />
-    </LinearLayout>
+    android:orientation="vertical"
+    tools:context=".Banner.ListBannerActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Danh sách poster"
+            android:textColor="@color/green"
+            android:textSize="23sp" />
+
+        <Button
+            android:id="@+id/btn_AddPoster"
+            android:layout_width="80dp"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="22dp"
+            android:background="@drawable/button_them"
+            android:fontFamily="@font/nunito_bold"
+            android:text="Thêm"
+            android:textAllCaps="false"
+            android:textColor="@color/green"
+            android:textSize="17sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="370dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
 
         <SearchView
             android:id="@+id/searchViewPoster"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/bg_textfield"
-            app:iconifiedByDefault="false"
-            app:queryHint="Search..."/>
+            android:layout_height="match_parent"
+            android:background="@drawable/search"
+            android:fontFamily="@font/nunito"
+            android:inputType="text"
+            android:queryHint="Tìm kiếm ..."
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
+            android:textSize="9sp" />
     </LinearLayout>
 
     <LinearLayout
