--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -9,32 +9,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btn_BackReport"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/ic_outline_keyboard_backspace_24" />
-
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="30dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:fontFamily="@font/nunito_bold"
             android:text="Báo cáo - thống kê"
-            android:textColor="@color/black"
-            android:textSize="19sp"
-            android:textStyle="bold" />
-
-        <View
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="20dp" />
+            android:textColor="@color/green"
+            android:textSize="23sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_marginRight="10dp"
             android:gravity="center"
             android:background="@drawable/bg_red"
             android:orientation="vertical">
@@ -57,9 +45,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Tổng đơn hàng"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textColor="@color/red"
+                android:fontFamily="@font/nunito_bold"
+                android:textSize="17sp"/>
 
             <TextView
                 android:id="@+id/txt_TongDonHang"
@@ -67,8 +55,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:hint="100"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textColor="@color/red"
+                android:textSize="19sp"
+                android:fontFamily="@font/nunito_bold"/>
 
         </LinearLayout>
 
@@ -76,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_weight="1"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:background="@drawable/bg_blue"
             android:orientation="vertical">
@@ -85,9 +75,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Tổng doanh thu"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+                android:textColor="@color/blue"
+                android:fontFamily="@font/nunito_bold"
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/txt_TongDoanhThu"
@@ -95,8 +85,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:hint="100000000"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textColor="@color/blue"
+                android:textSize="19sp"
+                android:fontFamily="@font/nunito_bold"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -130,7 +121,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thống kê theo ngày"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -156,7 +148,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thống kê theo tháng"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -187,7 +180,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thống kê theo quý"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -213,7 +207,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Quản lý khách hàng"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -244,7 +239,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thống kê đơn hàng"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -270,7 +266,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Quản lý đơn hàng"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray"
+                    android:fontFamily="@font/nunito_bold"
                     android:textSize="14dp"
                     android:textStyle="bold" />
             </LinearLayout>
