--- a/app/src/main/res/layout/custom_detail_receipt.xml
+++ b/app/src/main/res/layout/custom_detail_receipt.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="60dp"
@@ -13,7 +12,7 @@
         <ImageView
             android:id="@+id/img_DetailReceipt"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -25,67 +24,77 @@
         <LinearLayout
             android:layout_width="20dp"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="x"
                 android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/black"/>
+                android:text="x"
+                android:textColor="@color/gray"
+                android:fontFamily="@font/nunito_bold"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="30dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/txt_Detail_Soluong"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="10"
+                android:fontFamily="@font/nunito_bold"
                 android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/black"/>
+                android:text="10"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="150dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1">
 
             <TextView
                 android:id="@+id/txt_Detail_TenMon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="ten mon an"
-                android:textSize="14sp"
+                android:fontFamily="@font/nunito_bold"
                 android:gravity="center|left"
-                android:textColor="@color/black"/>
+                android:hint="ten mon an"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="80dp"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txt_Detail_Dongia"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="20000"
                 android:layout_weight="1"
-                android:textSize="14sp"
-                android:gravity="center|right"/>
+                android:fontFamily="@font/nunito_bold"
+                android:gravity="center|right"
+                android:hint="20000"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text=" đ"
+                android:gravity="center|right"
+                android:hint="đ"
                 android:textSize="14sp"
-                android:gravity="center|right"/>
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/gray"
+                android:fontFamily="@font/nunito_bold"/>
 
         </LinearLayout>
     </LinearLayout>
