--- a/app/src/main/res/layout/custom_post.xml
+++ b/app/src/main/res/layout/custom_post.xml
@@ -21,7 +21,8 @@
         android:inputType="textMultiLine"
         android:maxLines="2"
         android:paddingRight="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
+        android:fontFamily="@font/nunito_bold"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -35,6 +36,7 @@
         android:maxLength="50"
         android:maxLines="1"
         android:paddingRight="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
+        android:fontFamily="@font/nunito"
         android:textSize="14sp" />
 </LinearLayout>
