--- a/app/src/main/res/layout/custom_poster.xml
+++ b/app/src/main/res/layout/custom_poster.xml
@@ -19,7 +19,8 @@
             android:layout_gravity="center|left"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/gray"
+            android:fontFamily="@font/nunito_bold"
             android:textSize="15sp"
             android:layout_weight="1"
             android:hint="Tên poster" />
