--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="red">#F35555</color>
     <color name="blue">#5C9FF5</color>
     <color name="purple">#9C27B0</color>
+    <color name="greenlight">#6BF355</color>
+    <color name="whitegray">#D3D3D3</color>
+    <color name="brown">#9C7055</color>
 </resources>
